--- a/src/components/UI/Answer.module.scss
+++ b/src/components/UI/Answer.module.scss
@@ -1,10 +1,11 @@
 .listButton {
   height: 72px;
   min-width: 420px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='421' height='72' viewBox='0 0 421 72' fill='none'%3E%3Cpath d='M404 36L421 36' stroke='%23D0D0D8' /%3E%3Cpath d='M0 36L17 36' stroke='%23D0D0D8' /%3E%3Cpath d='M39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773Z' fill='white' stroke='%23D0D0D8' /%3E%3C/svg%3E");
+  background-image: url('data:image/svg+xml,<svg width="421" height="72" viewBox="0 0 421 72" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M404 36L421 36" stroke="%23D0D0D8"/><path d="M0 36L17 36" stroke="%23D0D0D8"/><path d="M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z" fill="white" stroke="%23D0D0D8"/></svg>');
   background-repeat: no-repeat;
   background-size: cover;
   background-color: transparent;
+  will-change: background-image;
   border: none;
   display: flex;
   align-items: center;
@@ -16,6 +17,7 @@
   color: #1c1c21;
   cursor: pointer;
   transition: background-image 0.25s ease-in-out;
+
   @media (max-width: 576px) {
     height: 56px;
     min-width: auto;
@@ -26,18 +28,28 @@
     background-size: contain;
     max-width: 320px;
     margin: 0 auto;
+    background-image: url('data:image/svg+xml,<svg width="320" height="56" viewBox="0 0 320 56" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M303 28L320 28" stroke="%23D0D0D8"/><path d="M0 28L17 28" stroke="%23D0D0D8"/><path d="M32.8175 5.31576C34.9762 2.29361 38.4615 0.5 42.1754 0.5H277.825C281.539 0.5 285.024 2.29361 287.183 5.31576L303.386 28L287.183 50.6842C285.024 53.7064 281.539 55.5 277.825 55.5H42.1754C38.4615 55.5 34.9762 53.7064 32.8175 50.6842L16.6145 28L32.8175 5.31576Z" fill="white" stroke="%23D0D0D8"/></svg>');
   }
 }
 .selected {
-  background-image: url("data:image/svg+xml,%3Csvg width='421' height='72' viewBox='0 0 421 72' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M404 36L421 36' stroke='%23FF8B37'/%3E%3Cpath d='M0 36L17 36' stroke='%23FF8B37'/%3E%3Cpath d='M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z' fill='%23FFF3EB' stroke='%23FF8B37'/%3E%3C/svg%3E%0A");
+  background-image: url('data:image/svg+xml,<svg width="421" height="72" viewBox="0 0 421 72" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M404 36L421 36" stroke="%23FF8B37"/><path d="M0 36L17 36" stroke="%23FF8B37"/><path d="M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z" fill="%23FFF3EB" stroke="%23FF8B37"/></svg>');
+  @media (max-width: 576px) {
+    background-image: url('data:image/svg+xml,<svg width="320" height="56" viewBox="0 0 320 56" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M303 28L320 28" stroke="%23FF8B37"/><path d="M0 28L17 28" stroke="%23FF8B37"/><path d="M32.8175 5.31576C34.9762 2.29361 38.4615 0.5 42.1754 0.5H277.825C281.539 0.5 285.024 2.29361 287.183 5.31576L303.386 28L287.183 50.6842C285.024 53.7064 281.539 55.5 277.825 55.5H42.1754C38.4615 55.5 34.9762 53.7064 32.8175 50.6842L16.6145 28L32.8175 5.31576Z" fill="%23FFF3EB" stroke="%23FF8B37"/></svg>');
+  }
 }
 
 .wrong {
-  background-image: url("data:image/svg+xml,%3Csvg width='421' height='72' viewBox='0 0 421 72' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M404 36L421 36' stroke='%23EC6259'/%3E%3Cpath d='M0 36L17 36' stroke='%23EC6259'/%3E%3Cpath d='M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z' fill='%23FDEEED' stroke='%23EC6259'/%3E%3C/svg%3E%0A");
+  background-image: url('data:image/svg+xml,<svg width="421" height="72" viewBox="0 0 421 72" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M404 36L421 36" stroke="%23EC6259"/><path d="M0 36L17 36" stroke="%23EC6259"/><path d="M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z" fill="%23FDEEED" stroke="%23EC6259"/></svg>');
+  @media (max-width: 576px) {
+    background-image: url('data:image/svg+xml,<svg width="320" height="56" viewBox="0 0 320 56" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M303 28L320 28" stroke="%23EC6259"/><path d="M0 28L17 28" stroke="%23EC6259"/><path d="M32.8175 5.31576C34.9762 2.29361 38.4615 0.5 42.1754 0.5H277.825C281.539 0.5 285.024 2.29361 287.183 5.31576L303.386 28L287.183 50.6842C285.024 53.7064 281.539 55.5 277.825 55.5H42.1754C38.4615 55.5 34.9762 53.7064 32.8175 50.6842L16.6145 28L32.8175 5.31576Z" fill="%23FDEEED" stroke="%23EC6259"/></svg>');
+  }
 }
 
 .correct {
-  background-image: url("data:image/svg+xml,%3Csvg width='421' height='72' viewBox='0 0 421 72' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M404 36L421 36' stroke='%2347D867'/%3E%3Cpath d='M0 36L17 36' stroke='%2347D867'/%3E%3Cpath d='M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z' fill='%23E6FAEA' stroke='%2347D867'/%3E%3C/svg%3E%0A");
+  background-image: url('data:image/svg+xml,<svg width="421" height="72" viewBox="0 0 421 72" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M404 36L421 36" stroke="%2347D867"/><path d="M0 36L17 36" stroke="%2347D867"/><path d="M49.012 0.5H371.988C375.607 0.5 379.014 2.2033 381.186 5.09773L404.375 36L381.186 66.9023C379.014 69.7967 375.607 71.5 371.988 71.5H49.012C45.3933 71.5 41.9857 69.7967 39.8137 66.9023L16.6251 36L39.8137 5.09773C41.9857 2.2033 45.3933 0.5 49.012 0.5Z" fill="%23E6FAEA" stroke="%2347D867"/></svg>');
+  @media (max-width: 576px) {
+    background-image: url('data:image/svg+xml,<svg width="320" height="56" viewBox="0 0 320 56" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M303 28L320 28" stroke="%2347D867"/><path d="M0 28L17 28" stroke="%2347D867"/><path d="M32.8175 5.31576C34.9762 2.29361 38.4615 0.5 42.1754 0.5H277.825C281.539 0.5 285.024 2.29361 287.183 5.31576L303.386 28L287.183 50.6842C285.024 53.7064 281.539 55.5 277.825 55.5H42.1754C38.4615 55.5 34.9762 53.7064 32.8175 50.6842L16.6145 28L32.8175 5.31576Z" fill="%23E6FAEA" stroke="%2347D867"/></svg>');
+  }
 }
 
 .label {
